Beacon, fully functional. Fix potion effect colors for entities.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -11,8 +11,8 @@ motd-2nd=§6MiNET
 
 WorldProvider=anvil
 
-ViewDistance=11
-MaxViewDistance=11
+ViewDistance=15
+MaxViewDistance=15
 MoveRenderDistance=1
 CalculateLights=true
 #CalculateLights.MakeMovie=false
@@ -98,7 +98,7 @@ QuackCore.Enabled=false
 #CoreCommands.Enabled=false
 #SurvivalCraft.Enabled=false
 Plotter.Enabled=false
-#BuilderBase.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
@@ -118,7 +118,7 @@ TracePackets.Verbosity.McpeMobArmorEquipment=0
 TracePackets.Verbosity.McpeUpdateBlock=1
 TracePackets.Verbosity.McpeUseItem=1
 TracePackets.Verbosity.McpeResourcePackDataInfo=0
-TracePackets.Verbosity.McpeAdventureSettings=0
+TracePackets.Verbosity.McpeAdventureSettings=1
 TracePackets.Verbosity.McpeCommandStep=1
 TracePackets.Verbosity.McpePlayerAction=1
 TracePackets.Verbosity.McpeInventoryTransactionPacket=1
@@ -127,3 +127,4 @@ TracePackets.Verbosity.McpeInventoryContent=1
 TracePackets.Verbosity.McpeInventoryTransaction=1
 TracePackets.Verbosity.McpeCommandRequest=3
 TracePackets.Verbosity.McpeModalFormResponse=3
+TracePackets.Verbosity.McpeContainerClose=1
