Fix more items and blocks. Fix item-frames, they work proper now.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,8 +18,9 @@ CalculateLights=true
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
+Player.GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
