--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -210,7 +210,7 @@
     <Compile Include="Blocks\IronBlock.cs" />
     <Compile Include="Blocks\IronDoor.cs" />
     <Compile Include="Blocks\IronTrapdoor.cs" />
-    <Compile Include="Blocks\ItemFrame.cs" />
+    <Compile Include="Blocks\Frame.cs" />
     <Compile Include="Blocks\LitPumpkin.cs" />
     <Compile Include="Blocks\JungleFenceGate.cs" />
     <Compile Include="Blocks\Ladder.cs" />
@@ -521,7 +521,7 @@
     <Compile Include="Items\ItemHoe.cs" />
     <Compile Include="Items\ItemIronAxe.cs" />
     <Compile Include="Items\ItemIronPickaxe.cs" />
-    <Compile Include="Items\ItemItemFrame.cs" />
+    <Compile Include="Items\ItemFrame.cs" />
     <Compile Include="Items\ItemLeatherBoots.cs" />
     <Compile Include="Items\ItemLeatherChestplate.cs" />
     <Compile Include="Items\ItemLeatherHelmet.cs" />
