Implemented paintings, in full. Report any and all bugs on discord.

--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -35,3 +35,4 @@ TracePackets.Verbosity.McpeExplode=1
 TracePackets.Verbosity.McpeEvent=1
 TracePackets.Verbosity.McpeInventoryTransaction=1
 TracePackets.Verbosity.McpeLevelSoundEvent=1
+TracePackets.Verbosity.McpeAddPainting=1
