--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -77,6 +77,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
+    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -391,6 +394,7 @@
     <Compile Include="Entities\Hostile\Wither.cs" />
     <Compile Include="Entities\Hostile\WitherSkeleton.cs" />
     <Compile Include="Entities\Npc.cs" />
+    <Compile Include="Entities\Painting.cs" />
     <Compile Include="Entities\Passive\Horse.cs" />
     <Compile Include="Entities\Passive\Llama.cs" />
     <Compile Include="Entities\Passive\PolarBear.cs" />
@@ -456,6 +460,7 @@
     <Compile Include="Items\ItemIronNugget.cs" />
     <Compile Include="Blocks\StandingBanner.cs" />
     <Compile Include="Blocks\WallBanner.cs" />
+    <Compile Include="Items\ItemPainting.cs" />
     <Compile Include="Net\McpeMovePlayer.cs" />
     <Compile Include="Utils\Diagnostics\Profiler.cs" />
     <Compile Include="Utils\Skins\Bone.cs" />
