--- a/src/MiNET/MiNET/packages.config
+++ b/src/MiNET/MiNET/packages.config
@@ -8,4 +8,5 @@
   <package id="MiNET.fnbt" version="1.0.13" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="SharpAvi" version="2.1.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
 </packages>
