--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -7,6 +7,7 @@ EnableEdu=false
 #TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
 TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeAvailableCommands
 TracePackets.Verbosity=0
+TracePackets.Verbosity.McpeMovePlayer=1
 TracePackets.Verbosity.McpeStartGame=1
 TracePackets.Verbosity.McpeAdventureSettings=1
 TracePackets.Verbosity.McpeAddPlayer=1
@@ -35,4 +36,6 @@ TracePackets.Verbosity.McpeExplode=1
 TracePackets.Verbosity.McpeEvent=1
 TracePackets.Verbosity.McpeInventoryTransaction=1
 TracePackets.Verbosity.McpeLevelSoundEvent=1
-TracePackets.Verbosity.McpeAddPainting=1
+TracePackets.Verbosity.McpeAddPainting=1
+TracePackets.Verbosity.McpeSetEntityLink=1
+
