--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -1,6 +1,6 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-UseEncryption=false
+UseEncryption=true
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
@@ -24,7 +24,7 @@ Player.GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
-GameRule.DoMobspawning=true
+GameRule.DoMobspawning=false
 GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
@@ -113,8 +113,8 @@ TracePackets.Verbosity.McpeClientToServerHandshake=1
 TracePackets.Verbosity.McpeAddEntity=0
 TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpePlayerList=0
-TracePackets.Verbosity.McpeAnimate=0
-TracePackets.Verbosity.McpeInteract=0
+TracePackets.Verbosity.McpeAnimate=1
+TracePackets.Verbosity.McpeInteract=1
 TracePackets.Verbosity.McpeMobArmorEquipment=0
 TracePackets.Verbosity.McpeUpdateBlock=1
 TracePackets.Verbosity.McpeUseItem=1
