--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -107,7 +107,7 @@ SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeClientToServerHandshake=1
 TracePackets.Verbosity.McpeAddEntity=0
@@ -129,3 +129,5 @@ TracePackets.Verbosity.McpeInventoryTransaction=1
 TracePackets.Verbosity.McpeCommandRequest=3
 TracePackets.Verbosity.McpeModalFormResponse=3
 TracePackets.Verbosity.McpeContainerClose=1
+TracePackets.Verbosity.McpeMoveEntity=1
+TracePackets.Verbosity.McpeRiderJump=1
