Fix loading time on anvil worlds that have MiNET calculate light. SHOULD not affect mini-games servers, but report any issues on it.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -47,8 +47,8 @@ Pathfinder.PrintPath=false
 # TEST
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
-#PCWorldFolder=D:\Temp\TestSave
-#Save.Enabled=true
+PCWorldFolder=D:\Temp\TestSave
+Save.Enabled=true
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -99,7 +99,7 @@ QuackCore.Enabled=false
 #CoreCommands.Enabled=false
 #SurvivalCraft.Enabled=false
 Plotter.Enabled=false
-BuilderBase.Enabled=false
+#BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
