Superflat for over, under and endwhere.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -47,7 +47,7 @@ Pathfinder.PrintPath=false
 # TEST
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
-PCWorldFolder=D:\Temp\TestSave
+#PCWorldFolder=D:\Temp\TestSave
 Save.Enabled=true
 
 # UHC maps
