--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -47,8 +47,9 @@ Pathfinder.PrintPath=false
 # TEST
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
-#PCWorldFolder=D:\Temp\TestSave
+PCWorldFolder=D:\Temp\TestSave
 Save.Enabled=true
+Save.Interval=100
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
