Fix save interval. Fix no-build on plots.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -1,6 +1,6 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-UseEncryption=true
+UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
@@ -11,8 +11,8 @@ motd-2nd=§6MiNET
 
 WorldProvider=anvil
 
-ViewDistance=15
-MaxViewDistance=15
+ViewDistance=25
+MaxViewDistance=25
 MoveRenderDistance=1
 CalculateLights=true
 #CalculateLights.MakeMovie=false
@@ -49,7 +49,7 @@ Pathfinder.PrintPath=false
 #PCWorldFolder=D:\Temp\TestWorld
 PCWorldFolder=D:\Temp\TestSave
 Save.Enabled=true
-Save.Interval=100
+Save.Interval=300
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -98,8 +98,8 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
 #CoreCommands.Enabled=false
-#SurvivalCraft.Enabled=false
-Plotter.Enabled=false
+SurvivalCraft.Enabled=false
+#Plotter.Enabled=false
 #BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
