--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -22,7 +22,7 @@ GameMode=Survival
 #GameMode=Creative
 Player.GameMode=Creative
 CheckForSafeSpawn=true
-EnableBlockTicking=true
+EnableBlockTicking=false
 EnableChunkTicking=true
 GameRule.DoMobspawning=false
 GameRule.DoDaylightcycle=true
