Lots of plot-related fixes and tweaks.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -97,7 +97,7 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 #PluginDisabled=true
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
-#CoreCommands.Enabled=false
+CoreCommands.Enabled=false
 SurvivalCraft.Enabled=false
 #Plotter.Enabled=false
 #BuilderBase.Enabled=false
