Fix level.dat saving. Yes it's gzip LOL Fix player remove event. Lots of new features for plotter plugin.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -25,7 +25,7 @@ CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=true
 GameRule.DoMobspawning=false
-GameRule.DoDaylightcycle=true
+GameRule.DoDaylightcycle=false
 GameRule.KeepInventory=true
 
 Pathfinder.PrintPath=false
@@ -47,9 +47,10 @@ Pathfinder.PrintPath=false
 # TEST
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
-PCWorldFolder=D:\Temp\TestSave
+#PCWorldFolder=D:\Temp\TestSave
+PCWorldFolder=D:\Temp\TestSave130
 Save.Enabled=true
-Save.Interval=300
+Save.Interval=30
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
