Extend masks so that it can deal with all kinds of combinations. Horse inventory + armor. Not entirely finished yet since it needs concurrency handling on the inventory as well.

--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -38,4 +38,5 @@ TracePackets.Verbosity.McpeInventoryTransaction=1
 TracePackets.Verbosity.McpeLevelSoundEvent=1
 TracePackets.Verbosity.McpeAddPainting=1
 TracePackets.Verbosity.McpeSetEntityLink=1
-
+TracePackets.Verbosity.McpePlayerHotbar=1
+TracePackets.Verbosity.McpeUpdateEquipment=1
