--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -48,9 +48,9 @@ Pathfinder.PrintPath=false
 #PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 #PCWorldFolder=D:\Temp\TestSave
-PCWorldFolder=D:\Temp\TestSave130
-Save.Enabled=true
-Save.Interval=30
+#PCWorldFolder=D:\Temp\TestSave130
+#Save.Enabled=true
+#Save.Interval=30
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
@@ -98,10 +98,10 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 #PluginDisabled=true
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
-CoreCommands.Enabled=false
+#CoreCommands.Enabled=false
 SurvivalCraft.Enabled=false
-#Plotter.Enabled=false
-#BuilderBase.Enabled=false
+Plotter.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
