--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -18,8 +18,8 @@ CalculateLights=false
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 Player.GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=false
@@ -45,11 +45,11 @@ Pathfinder.PrintPath=false
 #PCWorldFolder=D:\Downloads\broken_lobby\lobby
 
 # TEST
-#PCWorldFolder=D:\Development\DOES NOT EXIST
+PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestWorld
 #PCWorldFolder=D:\Temp\TestSave
-PCWorldFolder=D:\Temp\TestSave130
-Save.Enabled=true
+#PCWorldFolder=D:\Temp\TestSave130
+#Save.Enabled=true
 Save.Interval=30
 
 # UHC maps
@@ -58,6 +58,7 @@ Save.Interval=30
 #PCWorldFolder=D:\Development\Worlds\UHC\UHCr2000
 
 # Cool worlds for testing
+#PCWorldFolder=D:\Development\Worlds\Waka_Islands_2_v0.4\WAKA ISLANDS 2 - V0.4
 #PCWorldFolder=D:\Development\Worlds\TerrainControlGenerated
 #PCWorldFolder=D:\Temp\UHCr1000
 #PCWorldFolder=D:\Development\Worlds\SkyWarsBrokenLight\SkyWars
@@ -98,10 +99,10 @@ MiddleSchematic=D:\Development\Worlds\QuackSchematics\middle.schematic
 #PluginDisabled=true
 QuackCore.Enabled=false
 #NiceLobby.Enabled=false
-CoreCommands.Enabled=false
+#CoreCommands.Enabled=false
 SurvivalCraft.Enabled=false
-#Plotter.Enabled=false
-#BuilderBase.Enabled=false
+Plotter.Enabled=false
+BuilderBase.Enabled=false
 Pets.Enabled=false
 PushToTheLimit.Enabled=false
 Code4Fun.Enabled=false
