Add cache for chunk (sections). Should decrease memory load and give less gen 2 full stop GC.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -51,6 +51,7 @@ PCWorldFolder=D:\Development\DOES NOT EXIST
 #PCWorldFolder=D:\Temp\TestSave130
 #Save.Enabled=true
 Save.Interval=30
+Unload.Interval=10
 
 # UHC maps
 #PCWorldFolder=D:\Development\Worlds\InPVP UHC Vanilla\Vanilla
