--- a/src/MiNET/MiNET.BuilderBase/MiNET.BuilderBase.csproj
+++ b/src/MiNET/MiNET.BuilderBase/MiNET.BuilderBase.csproj
@@ -58,6 +58,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Topshelf, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b800c4cfcdeea87b, processorArchitecture=MSIL">
+      <HintPath>..\packages\Topshelf.4.0.3\lib\net452\Topshelf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuilderBaseItemFactory.cs" />
