--- a/src/MiNET/MiNET.Test/packages.config
+++ b/src/MiNET/MiNET.Test/packages.config
@@ -9,4 +9,5 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.7.1" targetFramework="net461" />
   <package id="Stripe.net" version="10.4.0" targetFramework="net461" />
+  <package id="Topshelf" version="4.0.3" targetFramework="net461" />
 </packages>
