--- a/src/MiNET/TestPlugin/packages.config
+++ b/src/MiNET/TestPlugin/packages.config
@@ -5,4 +5,5 @@
   <package id="MiNET.fnbt" version="1.0.13" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Stripe.net" version="10.4.0" targetFramework="net461" />
+  <package id="Topshelf" version="4.0.3" targetFramework="net461" />
 </packages>
