--- a/src/MiNET/MiNET.Service/MiNET.Service.csproj
+++ b/src/MiNET/MiNET.Service/MiNET.Service.csproj
@@ -91,6 +91,9 @@
     <None Include="server.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="server.nicke.conf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="server.gurun.conf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
