--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -5,7 +5,7 @@ EnableEdu=false
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
 #TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMoveEntity|McpeMovePlayer
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeAvailableCommands
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeMovePlayer=1
 TracePackets.Verbosity.McpeStartGame=1
@@ -25,7 +25,7 @@ TracePackets.Verbosity.McpePlayerAction=1
 TracePackets.Verbosity.McpeRemoveBlock=1
 TracePackets.Verbosity.McpeUseItem=1
 TracePackets.Verbosity.McpeResourcePackDataInfo=0
-TracePackets.Verbosity.McpeAvailableCommands=2
+TracePackets.Verbosity.McpeAvailableCommands=0
 TracePackets.Verbosity.McpeCommandStep=1
 TracePackets.Verbosity.McpeContainerOpen=0
 TracePackets.Verbosity.McpeMapInfoRequest=0
