Lots of stuff. Moving to old laptop, so just need to commit!

--- a/src/MiNET/MiNET.Client/server.conf
+++ b/src/MiNET/MiNET.Client/server.conf
@@ -40,3 +40,4 @@ TracePackets.Verbosity.McpeAddPainting=1
 TracePackets.Verbosity.McpeSetEntityLink=1
 TracePackets.Verbosity.McpePlayerHotbar=1
 TracePackets.Verbosity.McpeUpdateEquipment=1
+TracePackets.Verbosity.McpeUpdateBlockSynced=1
