--- a/src/MiNET/MiNET.Service/server.nicke.conf
+++ b/src/MiNET/MiNET.Service/server.nicke.conf
@@ -18,9 +18,9 @@ CalculateLights=false
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-#GameMode=Survival
-GameMode=Creative
-Player.GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
+#Player.GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=true
