--- a/src/MiNET/MiNET.Test/MiNET.Test.csproj
+++ b/src/MiNET/MiNET.Test/MiNET.Test.csproj
@@ -107,6 +107,7 @@
     <Compile Include="MinetAnvilTest.cs" />
     <Compile Include="MinetCrytopTest.cs" />
     <Compile Include="MinetSchematicsTest.cs" />
+    <Compile Include="PerformanceTest.cs" />
     <Compile Include="PlotterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MinetServerTest.cs" />
