Entites use delta packet for sendng positions. Most regular mobs work, but need to work on some others that rely heavily on BroadCastMotion in entity.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -1,6 +1,6 @@
 ﻿#DO NOT REMOVE THIS LINE - MiNET Config
 
-UseEncryption=false
+#UseEncryption=false
 #UseEncryptionForAll=true
 #ForceOrderingForAll=false
 ForceXBLAuthentication=false
@@ -14,18 +14,18 @@ WorldProvider=anvil
 ViewDistance=20
 MaxViewDistance=20
 MoveRenderDistance=1
-CalculateLights=false
+CalculateLights=true
 #CalculateLights.MakeMovie=false
 
 # Game mode and rules
-#GameMode=Survival
-GameMode=Creative
+GameMode=Survival
+#GameMode=Creative
 Player.GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=false
 EnableChunkTicking=true
-GameRule.DoMobspawning=false
-GameRule.DoDaylightcycle=false
+GameRule.DoMobspawning=true
+GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 
 Pathfinder.PrintPath=false
@@ -111,10 +111,11 @@ SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeClientToServerHandshake=1
-TracePackets.Verbosity.McpeAddEntity=0
+TracePackets.Verbosity.McpeAddEntity=1
+TracePackets.Verbosity.McpeAddItemEntity=1
 TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpePlayerList=0
 TracePackets.Verbosity.McpeAnimate=1
