--- a/src/MiNET/MiNET/MiNET.csproj
+++ b/src/MiNET/MiNET/MiNET.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors" />
+    <Reference Include="System.Security" />
     <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -108,10 +109,12 @@
     <Compile Include="BlockEntities\ItemFrameBlockEntity.cs" />
     <Compile Include="BlockEntities\MobSpawnerBlockEntity.cs" />
     <Compile Include="BlockEntities\Sign.cs" />
+    <Compile Include="BlockEntities\ChalkboardBlockEntity.cs" />
     <Compile Include="BlockEntities\SkullBlockEntity.cs" />
     <Compile Include="BlockFace.cs" />
     <Compile Include="Blocks\AcaciaDoor.cs" />
     <Compile Include="Blocks\AcaciaFenceGate.cs" />
+    <Compile Include="Blocks\Chalkboard.cs" />
     <Compile Include="Blocks\Jukebox.cs" />
     <Compile Include="Blocks\Leaves2.cs" />
     <Compile Include="Blocks\Log2.cs" />
@@ -464,6 +467,7 @@
     <Compile Include="Entities\Vehicles\Minecart.cs" />
     <Compile Include="Items\ItemBanner.cs" />
     <Compile Include="Items\ItemBoat.cs" />
+    <Compile Include="Items\ItemChalkboard.cs" />
     <Compile Include="Items\ItemHorseArmorDiamond.cs" />
     <Compile Include="Items\ItemFireworks.cs" />
     <Compile Include="Items\ItemGoldenCarrot.cs" />
