Camera fully implemented, including photo transfer. Please override the handler in player to get your own custom behavior for images.

--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -136,3 +136,4 @@ TracePackets.Verbosity.McpeModalFormResponse=3
 TracePackets.Verbosity.McpeContainerClose=1
 TracePackets.Verbosity.McpeMoveEntity=1
 TracePackets.Verbosity.McpeRiderJump=1
+TracePackets.Verbosity.McpePhotoTransfer=0
