Added NPC. Full implementation. Fully working.

--- a/src/MiNET/MiNET.Service/server.conf
+++ b/src/MiNET/MiNET.Service/server.conf
@@ -15,14 +15,16 @@ motd-2nd=§6MiNET
 ViewDistance=16
 MaxViewDistance=8
 
-GameMode=Survival
-#GameMode=Creative
+#GameMode=Survival
+GameMode=Creative
 #GameMode=Spectator
 #GameMode=Adventure
 
 #Difficulty=Peaceful
 #Difficulty=Easy
 Difficulty=Normal
+
+EnableCommands=true
 
 CheckForSafeSpawn=true
 
