--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -137,3 +137,5 @@ TracePackets.Verbosity.McpeContainerClose=1
 TracePackets.Verbosity.McpeMoveEntity=1
 TracePackets.Verbosity.McpeRiderJump=1
 TracePackets.Verbosity.McpePhotoTransfer=0
+TracePackets.Verbosity.McpeSetEntityData=1
+TracePackets.Verbosity.McpeNpcRequest=1
