--- a/src/MiNET/MiNET.Service/server.nicke_000.conf
+++ b/src/MiNET/MiNET.Service/server.nicke_000.conf
@@ -111,28 +111,28 @@ SafePay.Enabled=false
 
 # REGEX docs! https://msdn.microsoft.com/en-us/library/az24scfc(v=vs.110).aspx
 #TracePackets.Include=Mcpe.*
-TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer
+TracePackets.Exclude=McpeWrapper|McpeBatch|McpeFullChunkData|McpeMovePlayer|McpeMoveEntity|McpeMoveEntityDelta
 TracePackets.Verbosity=0
 TracePackets.Verbosity.McpeClientToServerHandshake=1
-TracePackets.Verbosity.McpeAddEntity=1
-TracePackets.Verbosity.McpeAddItemEntity=1
+TracePackets.Verbosity.McpeAddEntity=0
+TracePackets.Verbosity.McpeAddItemEntity=0
 TracePackets.Verbosity.McpeAddPlayer=0
 TracePackets.Verbosity.McpePlayerList=0
-TracePackets.Verbosity.McpeAnimate=1
-TracePackets.Verbosity.McpeInteract=1
+TracePackets.Verbosity.McpeAnimate=0
+TracePackets.Verbosity.McpeInteract=0
 TracePackets.Verbosity.McpeMobArmorEquipment=0
-TracePackets.Verbosity.McpeUpdateBlock=1
-TracePackets.Verbosity.McpeUseItem=1
+TracePackets.Verbosity.McpeUpdateBlock=0
+TracePackets.Verbosity.McpeUseItem=0
 TracePackets.Verbosity.McpeResourcePackDataInfo=0
-TracePackets.Verbosity.McpeAdventureSettings=1
-TracePackets.Verbosity.McpeCommandStep=1
-TracePackets.Verbosity.McpePlayerAction=1
-TracePackets.Verbosity.McpeInventoryTransactionPacket=1
-TracePackets.Verbosity.McpePlayerHotbar=1
-TracePackets.Verbosity.McpeInventoryContent=1
-TracePackets.Verbosity.McpeInventoryTransaction=1
-TracePackets.Verbosity.McpeCommandRequest=3
-TracePackets.Verbosity.McpeModalFormResponse=3
-TracePackets.Verbosity.McpeContainerClose=1
-TracePackets.Verbosity.McpeMoveEntity=1
-TracePackets.Verbosity.McpeRiderJump=1
+TracePackets.Verbosity.McpeAdventureSettings=0
+TracePackets.Verbosity.McpeCommandStep=0
+TracePackets.Verbosity.McpePlayerAction=0
+TracePackets.Verbosity.McpeInventoryTransactionPacket=0
+TracePackets.Verbosity.McpePlayerHotbar=0
+TracePackets.Verbosity.McpeInventoryContent=0
+TracePackets.Verbosity.McpeInventoryTransaction=0
+TracePackets.Verbosity.McpeCommandRequest=0
+TracePackets.Verbosity.McpeModalFormResponse=0
+TracePackets.Verbosity.McpeContainerClose=0
+TracePackets.Verbosity.McpeMoveEntity=0
+TracePackets.Verbosity.McpeRiderJump=0
